# docaitor

./: .gitignore  LICENSE  README.md  pyproject.toml
src/docaitor/: __init__.py
src/docaitor/core/: data_loader.py  data_merge.py  html_generator.py  output_generator.py
src/docaitor/core/tests/: test_data_loader.py  test_data_merge.py  test_html_generator.py  test_output_generator.py
src/docaitor/core/tests/fixtures/: invalid.toml  invalid.yaml  sample_resume.toml  sample_resume.yaml
src/docaitor/core/tests/fixtures/templates/: simple_template.html
src/docaitor/scripts/: docaitor.py
tests/: test_functional.py
