[project]
name = "docaitor"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "swilcox", email = "steven@wilcoxzone.com" }]
dependencies = [
    "click>=8.1.7",
    "jinja2>=3.1.3",
    "pyyaml>=6.0.1",
    "deepmerge>=1.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.optional-dependencies]
docs = ["mkdocs>=1.5.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pytest>=8.1.1"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/docaitor"]

[project.scripts]
docaitor = 'docaitor.scripts.docaitor:cli'
